修改数据保存格式，更改内容显示方式

--- a/com.jeden.tel/res/layout/activity_main.xml
+++ b/com.jeden.tel/res/layout/activity_main.xml
@@ -1,69 +1,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
-
     <LinearLayout 
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-        <Button 
-            android:id="@+id/add_tel"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:text="添加电话"
-            android:textSize="18sp"
-            />
-        <Button 
-            android:id="@+id/cancel_tel"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:text="删除电话"
-            android:textSize="18sp"
-            />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="1.0">
+	    <LinearLayout
+	        android:layout_width="fill_parent"
+	        android:layout_height="50dp"
+	        android:orientation="horizontal">
+	        <Button 
+	            android:id="@+id/title_tel"
+	            android:layout_width="wrap_content"
+	            android:layout_height="fill_parent"
+	            android:layout_weight="1"
+	            android:background="#666666"
+	            android:text="@string/title_tel_string"
+	            android:textSize="18sp"
+	            android:textColor="#FFFFFF"/>
+	        <Button 
+	            android:id="@+id/title_msg"
+	            android:layout_width="wrap_content"
+	            android:layout_height="fill_parent"
+	            android:layout_weight="1"
+	            android:background="#666666"
+	            android:text="@string/title_msg_string"
+	            android:textSize="18sp"
+	            android:textColor="#FFFFFF"/>
+	        <Button 
+	            android:id="@+id/title_black"
+	            android:layout_width="wrap_content"
+	            android:layout_height="fill_parent"
+	            android:layout_weight="1"
+	            android:background="#666666"
+	            android:text="@string/title_black_string"
+	            android:textSize="18sp"
+	            android:textColor="#FFFFFF"/>
+	    </LinearLayout>
+	    <ImageView 
+	        android:id="@+id/title_cursor"
+	        android:layout_width="wrap_content"
+	        android:layout_height="5dp"
+	        android:contentDescription="@string/app_name"/>
+	    <android.support.v4.view.ViewPager
+	        android:id="@+id/content_view"
+	        android:layout_width="fill_parent"
+	        android:layout_height="match_parent"
+	        android:flipInterval="30"  
+	        android:persistentDrawingCache="animation"/>
     </LinearLayout>
-    <EditText
-        android:id="@+id/add_edit"
-        android:layout_weight="1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="请输入号码"
-        android:layout_margin="2dp"
-        android:textSize="16sp"/>
-    <EditText
-        android:id="@+id/tels"
-        android:layout_weight="16"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-        android:focusable="false"
-        android:textSize="16sp"
-        android:editable="false"/>
-    <LinearLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-        <Button 
-            android:id="@+id/clear_tel"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text="清空记录"
-            android:textSize="18sp"
-            />
-    </LinearLayout>
-    <EditText
-        android:id="@+id/hestory"
-        android:layout_weight="16"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-        android:focusable="false"
-        android:textSize="16sp"
-        android:editable="false"/>
-
+  	<Button 
+  	    android:id="@+id/bottom_btn"
+  	    android:layout_width="fill_parent"
+  	    android:layout_height="50dp"
+  	    android:textSize="22sp"/>
 </LinearLayout>
